fix: error on alignment for meeting scheduling

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 
 img.headshot{
-    height: 15em;
+    height: 10em;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
@@ -43,10 +43,9 @@ div.social i{
 
 
 div.meet{
-    padding-top: 5%;
     margin-left: 10%;
     margin-right: 10%;
-    display: inline;
+    /* display: inline; */
 }
 
 div.meet h1{
@@ -58,9 +57,6 @@ div.meet h1{
 }
 
 div.meet button {
-    
-    display: inline-block;
-    
     cursor: pointer;
     outline: 0;
     display: inline-block;
